2005-08-22  Callum McKenzie  <callum@spooky-possum.org>

	* press_data.c:
	* press_data.h:
	* events.c: Fix the drawing hack for the case where multiple cards
	are being dragged. Extended the press_data structure with height
	and width data to assist this.

2005-08-21  Callum McKenzie  <callum@spooky-possum.org>

	* draw.c: 
	* sol.c:
	* events.c:
	* events.h: Change the drawing mechanism from "Set the background
	pixmap and let the X server sort it out" to an explicit expose
	function that draws from the surface pixmap. This is necessary to
	avoid a bad interaction between the initialisation of the drawing
	code and GTK+ 2.8.0. 

2005-08-19  Callum McKenzie  <callum@spooky-possum.org>

	* rules/freecell.scm: Patch from Dagfinn I. Mannsåker to make
	dragging to the freecells work again.

2005-07-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.c: Fix the race condition reported in bug #121762 by making
	the end_of_game check in the timeout conditional on the game
	supporting a timeout condition. Currently none do, but if any did
	the game would have to be careful to allow no more moves or bug
	#121762 will reappear. Also removed the code that was patching the
	symptom rather than the cause.

	* cscmi.c (cscmi_timeout_lambda): Since it is called from C, make
	it return a C value (gboolean in this case).

2005-07-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* events.c: Make the placement of cards even better by ignoring
	invalid slots we are mostly over in favour of valid slots we are
	only partially over.

2005-07-20  Dennis Cranston <dennis_cranston@yahoo.com>

	* aisleriot/dialog.c: Add a mnemonic to the new game button.

2005-07-20  Callum McKenzie  <callum@physics.otago.ac.nz>

	* slot.c: Minor cosmetic changes to the code.

	* events.c: Cleanups of the card-targeting code. Based on a patch
	from Peter Moulder.

2005-07-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* translatable_game_names.h: Run get_titles.pl to update it for