@@ -2,7 +2,7 @@ figdir = figures
 docname = aisleriot
 lang = fr
 omffile = aisleriot-fr.omf
-entities = legal.xml definitions.xml agnes.xml auld_lang_syne.xml bakers_dozen.xml bakers_game.xml beleaguered_castle.xml block_ten.xml	bristol.xml camelot.xml canfield.xml chessboard.xml clock.xml cover.xml	diamond_mine.xml doublets.xml eagle-wing.xml easthaven.xml eight_off.xml elevator.xml escalator.xml first_law.xml fortress.xml fortunes.xml fourteen.xml freecell.xml gay_gordons.xml glenwood.xml golf.xml gypsy.xml helsinki.xml hopscotch.xml isabel.xml jamestown.xml jumbo.xml kansas.xml king_albert.xml klondike.xml labyrinth.xml lady_jane.xml maze.xml monte_carlo.xml neighbor.xml odessa.xml osmosis.xml peek.xml pileon.xml plait.xml poker.xml quatorze.xml royal_east.xml scorpion.xml scuffle.xml seahaven.xml sir_tommy.xml spider.xml spider_one_suit.xml spider_two_suit.xml spiderette.xml straight_up.xml streets_and_alleys.xml ten_across.xml thieves.xml thirteen.xml thumb_and_pouch.xml treize.xml union_square.xml valentine.xml westhaven.xml whitehead.xml will_o_the_wisp.xml yield.xml yukon.xml zebra.xml
+entities = legal.xml definitions.xml agnes.xml auld_lang_syne.xml backbone.xml bakers_dozen.xml bakers_game.xml beleaguered_castle.xml block_ten.xml	bristol.xml camelot.xml canfield.xml carpet.xml chessboard.xml clock.xml cover.xml	diamond_mine.xml doublets.xml eagle-wing.xml easthaven.xml eight_off.xml elevator.xml escalator.xml first_law.xml fortress.xml fortunes.xml fourteen.xml freecell.xml gay_gordons.xml glenwood.xml golf.xml gypsy.xml helsinki.xml hopscotch.xml isabel.xml jamestown.xml jumbo.xml kansas.xml king_albert.xml klondike.xml labyrinth.xml lady_jane.xml maze.xml monte_carlo.xml neighbor.xml odessa.xml osmosis.xml peek.xml pileon.xml plait.xml poker.xml quatorze.xml royal_east.xml scorpion.xml scuffle.xml seahaven.xml sir_tommy.xml spider.xml spider_one_suit.xml spider_two_suit.xml spiderette.xml straight_up.xml streets_and_alleys.xml ten_across.xml thieves.xml thirteen.xml thumb_and_pouch.xml treize.xml triple_peaks.xml union_square.xml valentine.xml westhaven.xml whitehead.xml will_o_the_wisp.xml yield.xml yukon.xml zebra.xml
 include $(top_srcdir)/xmldocs.make
 dist-hook: app-dist-hook
 
