@@ -1,3 +1,7 @@
+2005-09-05  Callum McKenzie  <callum@spooky-possum.org>
+
+	* fr/Makefile.am (entities): Actually install the new help files.
+
 2005-07-29  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* C/aisleriot.xml: Update for 2.12.
