@@ -1,3 +1,8 @@
+2005-09-05  Callum McKenzie  <callum@spooky-possum.org>
+
+	* rules/gypsy.scm (get-hint): Add a check in the hints for moving
+	cards back down from the foundation. See bug #315258.
+
 2005-08-22  Callum McKenzie  <callum@spooky-possum.org>
 
 	* press_data.c:
